fix: iframe overflow issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@media screen and (min-width: 1200px) and (max-width: 1600px) {
-  body {
-    zoom: 0.75
-  }
-}
-
 ::-webkit-scrollbar {
   width: 16px;
 }
@@ -31,6 +25,7 @@
 
 #videoDetailPlayer iframe {
   width: 100%;
+  height: 100%;
 }
 
 #channelSectionsMenu::-webkit-scrollbar {
